Timor: added ipynb files

--- a/waveletcifar10.ipynb
+++ b/waveletcifar10.ipynb
@@ -28,7 +28,7 @@
     "from sklearn.model_selection import KFold\n",
     "from keras.optimizers import Adam, SGD, RMSprop\n",
     "from keras.callbacks import ModelCheckpoint, EarlyStopping\n",
-    "from tensorflow.keras.utils import to_categorical, Sequence"
+    "from tensorflow.keras.utils import to_categorical, Sequence\n"
    ]
   },
   {
@@ -123,90 +123,103 @@
    "execution_count": 7,
    "metadata": {
     "colab": {
-     "base_uri": "https://localhost:8080/"
+     "base_uri": "https://localhost:8080/",
+     "height": 374
+    },
+    "executionInfo": {
+     "elapsed": 1528,
+     "status": "error",
+     "timestamp": 1619560564816,
+     "user": {
+      "displayName": "Timor Leiderman",
+      "photoUrl": "",
+      "userId": "08373872098763895641"
+     },
+     "user_tz": -180
     },
     "id": "BS6tyzZwSqlk",
-    "outputId": "9f924190-9aa6-451c-9d52-a0528ae34b38"
+    "outputId": "72496378-c9c1-4782-95ce-9a0803e0a851"
    },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "WARNING:tensorflow:From C:\\Users\\Olya\\Anaconda3\\envs\\dwtcnn\\lib\\site-packages\\keras\\backend\\tensorflow_backend.py:4070: The name tf.nn.max_pool is deprecated. Please use tf.nn.max_pool2d instead.\n",
-      "\n",
       "WARNING:tensorflow:From C:\\Users\\Olya\\Anaconda3\\envs\\dwtcnn\\lib\\site-packages\\keras\\backend\\tensorflow_backend.py:422: The name tf.global_variables is deprecated. Please use tf.compat.v1.global_variables instead.\n",
       "\n",
       "Train on 40000 samples, validate on 10000 samples\n",
       "Epoch 1/30\n",
-      " - 22s - loss: 2.1494 - accuracy: 0.2394 - val_loss: 1.7769 - val_accuracy: 0.3503\n",
+      " - 29s - loss: 2.4951 - accuracy: 0.1668 - val_loss: 1.8960 - val_accuracy: 0.2792\n",
       "Epoch 2/30\n",
-      " - 21s - loss: 1.7202 - accuracy: 0.3667 - val_loss: 1.6097 - val_accuracy: 0.4249\n",
+      " - 28s - loss: 1.8783 - accuracy: 0.2975 - val_loss: 1.7341 - val_accuracy: 0.3787\n",
       "Epoch 3/30\n",
-      " - 21s - loss: 1.5818 - accuracy: 0.4223 - val_loss: 1.4315 - val_accuracy: 0.4820\n",
+      " - 29s - loss: 1.7069 - accuracy: 0.3702 - val_loss: 1.4878 - val_accuracy: 0.4581\n",
       "Epoch 4/30\n",
-      " - 21s - loss: 1.4901 - accuracy: 0.4615 - val_loss: 1.3599 - val_accuracy: 0.5216\n",
+      " - 28s - loss: 1.6103 - accuracy: 0.4083 - val_loss: 1.4079 - val_accuracy: 0.4943\n",
       "Epoch 5/30\n",
-      " - 21s - loss: 1.4155 - accuracy: 0.4899 - val_loss: 1.2019 - val_accuracy: 0.5751\n",
+      " - 28s - loss: 1.5248 - accuracy: 0.4444 - val_loss: 1.3574 - val_accuracy: 0.5144\n",
       "Epoch 6/30\n",
-      " - 21s - loss: 1.3545 - accuracy: 0.5160 - val_loss: 1.1736 - val_accuracy: 0.5875\n",
+      " - 29s - loss: 1.4767 - accuracy: 0.4617 - val_loss: 1.2811 - val_accuracy: 0.5417\n",
       "Epoch 7/30\n",
-      " - 21s - loss: 1.2985 - accuracy: 0.5362 - val_loss: 1.0979 - val_accuracy: 0.6130\n",
+      " - 28s - loss: 1.4130 - accuracy: 0.4910 - val_loss: 1.2643 - val_accuracy: 0.5400\n",
       "Epoch 8/30\n",
-      " - 21s - loss: 1.2410 - accuracy: 0.5579 - val_loss: 1.0466 - val_accuracy: 0.6332\n",
+      " - 28s - loss: 1.3668 - accuracy: 0.5089 - val_loss: 1.1882 - val_accuracy: 0.5764\n",
       "Epoch 9/30\n",
-      " - 21s - loss: 1.1956 - accuracy: 0.5761 - val_loss: 1.0054 - val_accuracy: 0.6512\n",
+      " - 29s - loss: 1.3238 - accuracy: 0.5272 - val_loss: 1.1660 - val_accuracy: 0.5831\n",
       "Epoch 10/30\n",
-      " - 21s - loss: 1.1560 - accuracy: 0.5888 - val_loss: 1.0498 - val_accuracy: 0.6379\n",
+      " - 29s - loss: 1.2713 - accuracy: 0.5464 - val_loss: 1.1710 - val_accuracy: 0.5826\n",
       "Epoch 11/30\n",
-      " - 21s - loss: 1.1149 - accuracy: 0.6052 - val_loss: 0.9277 - val_accuracy: 0.6768\n",
+      " - 28s - loss: 1.2365 - accuracy: 0.5597 - val_loss: 1.1560 - val_accuracy: 0.6004\n",
       "Epoch 12/30\n",
-      " - 21s - loss: 1.0855 - accuracy: 0.6159 - val_loss: 0.9157 - val_accuracy: 0.6807\n",
+      " - 28s - loss: 1.2034 - accuracy: 0.5727 - val_loss: 1.0536 - val_accuracy: 0.6260\n",
       "Epoch 13/30\n",
-      " - 21s - loss: 1.0544 - accuracy: 0.6295 - val_loss: 0.8607 - val_accuracy: 0.7014\n",
+      " - 29s - loss: 1.1753 - accuracy: 0.5832 - val_loss: 1.0293 - val_accuracy: 0.6371\n",
       "Epoch 14/30\n",
-      " - 21s - loss: 1.0231 - accuracy: 0.6395 - val_loss: 0.8807 - val_accuracy: 0.6917\n",
+      " - 29s - loss: 1.1351 - accuracy: 0.5975 - val_loss: 1.0402 - val_accuracy: 0.6427\n",
       "Epoch 15/30\n",
-      " - 21s - loss: 1.0084 - accuracy: 0.6445 - val_loss: 0.8376 - val_accuracy: 0.7124\n",
+      " - 28s - loss: 1.1112 - accuracy: 0.6048 - val_loss: 0.9822 - val_accuracy: 0.6575\n",
       "Epoch 16/30\n",
-      " - 21s - loss: 0.9791 - accuracy: 0.6559 - val_loss: 0.7992 - val_accuracy: 0.7267\n",
+      " - 29s - loss: 1.0817 - accuracy: 0.6174 - val_loss: 0.9689 - val_accuracy: 0.6718\n",
       "Epoch 17/30\n",
-      " - 21s - loss: 0.9596 - accuracy: 0.6625 - val_loss: 0.7834 - val_accuracy: 0.7264\n",
+      " - 29s - loss: 1.0572 - accuracy: 0.6262 - val_loss: 0.9266 - val_accuracy: 0.6804\n",
       "Epoch 18/30\n",
-      " - 21s - loss: 0.9402 - accuracy: 0.6698 - val_loss: 0.8003 - val_accuracy: 0.7291\n",
+      " - 29s - loss: 1.0361 - accuracy: 0.6336 - val_loss: 0.9257 - val_accuracy: 0.6855\n",
       "Epoch 19/30\n",
-      " - 21s - loss: 0.9279 - accuracy: 0.6767 - val_loss: 0.8128 - val_accuracy: 0.7200\n",
+      " - 29s - loss: 1.0103 - accuracy: 0.6467 - val_loss: 0.9611 - val_accuracy: 0.6623\n",
       "Epoch 20/30\n",
-      " - 21s - loss: 0.9016 - accuracy: 0.6848 - val_loss: 0.8343 - val_accuracy: 0.7114\n",
+      " - 29s - loss: 0.9881 - accuracy: 0.6533 - val_loss: 0.9436 - val_accuracy: 0.6792\n",
       "Epoch 21/30\n",
-      " - 21s - loss: 0.8876 - accuracy: 0.6913 - val_loss: 0.7618 - val_accuracy: 0.7367\n",
+      " - 29s - loss: 0.9692 - accuracy: 0.6597 - val_loss: 0.8245 - val_accuracy: 0.7161\n",
       "Epoch 22/30\n",
-      " - 21s - loss: 0.8810 - accuracy: 0.6909 - val_loss: 0.7045 - val_accuracy: 0.7521\n",
+      " - 29s - loss: 0.9423 - accuracy: 0.6704 - val_loss: 0.8069 - val_accuracy: 0.7191\n",
       "Epoch 23/30\n",
-      " - 21s - loss: 0.8579 - accuracy: 0.7015 - val_loss: 0.7495 - val_accuracy: 0.7421\n",
+      " - 29s - loss: 0.9169 - accuracy: 0.6792 - val_loss: 0.8234 - val_accuracy: 0.7172\n",
       "Epoch 24/30\n",
-      " - 21s - loss: 0.8494 - accuracy: 0.7046 - val_loss: 0.7009 - val_accuracy: 0.7632\n",
+      " - 29s - loss: 0.9014 - accuracy: 0.6845 - val_loss: 0.8261 - val_accuracy: 0.7131\n",
       "Epoch 25/30\n",
-      " - 21s - loss: 0.8377 - accuracy: 0.7084 - val_loss: 0.7408 - val_accuracy: 0.7396\n",
+      " - 29s - loss: 0.8816 - accuracy: 0.6903 - val_loss: 0.7917 - val_accuracy: 0.7251\n",
       "Epoch 26/30\n",
-      " - 21s - loss: 0.8228 - accuracy: 0.7151 - val_loss: 0.6911 - val_accuracy: 0.7603\n",
+      " - 29s - loss: 0.8643 - accuracy: 0.6970 - val_loss: 0.7733 - val_accuracy: 0.7337\n",
       "Epoch 27/30\n",
-      " - 21s - loss: 0.8019 - accuracy: 0.7222 - val_loss: 0.6803 - val_accuracy: 0.7704\n",
+      " - 28s - loss: 0.8421 - accuracy: 0.7031 - val_loss: 0.7420 - val_accuracy: 0.7458\n",
       "Epoch 28/30\n",
-      " - 21s - loss: 0.7984 - accuracy: 0.7239 - val_loss: 0.6857 - val_accuracy: 0.7668\n",
+      " - 28s - loss: 0.8248 - accuracy: 0.7119 - val_loss: 0.7413 - val_accuracy: 0.7468\n",
       "Epoch 29/30\n",
-      " - 21s - loss: 0.7865 - accuracy: 0.7244 - val_loss: 0.7204 - val_accuracy: 0.7588\n",
+      " - 28s - loss: 0.8193 - accuracy: 0.7147 - val_loss: 0.7355 - val_accuracy: 0.7483\n",
       "Epoch 30/30\n",
-      " - 21s - loss: 0.7754 - accuracy: 0.7322 - val_loss: 0.7176 - val_accuracy: 0.7492\n",
-      "10000/10000 [==============================] - 1s 139us/step\n"
+      " - 29s - loss: 0.7995 - accuracy: 0.7213 - val_loss: 0.7817 - val_accuracy: 0.7311\n",
+      "10000/10000 [==============================] - 2s 185us/step\n"
      ]
     }
    ],
    "source": [
     "\n",
     "# Create and Train the Model\n",
-    "model = models.cifar10CNN.cifar10CNN(imageShape, nb_classes)\n",
-    "history_file_path = \"trainHistoryCifar10CNN.txt\"  # save loss and val loss\n",
+    "\n",
+    "model = models.WaveletCifar10CNN.WaveletCNN(imageShape, nb_classes)\n",
+    "history_file_path = \"trainHistoryWaveletCifar10CNN.txt\" # save loss and val loss\n",
+    "\n",
+    "# model.summary()\n",
     "\n",
     "model.compile(loss='categorical_crossentropy', optimizer=optimizer, metrics=[\"accuracy\"])\n",
     "\n",
@@ -281,16 +294,18 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "id": "BaMMFzhOT7OM"
+   },
    "outputs": [],
    "source": []
   }
  ],
  "metadata": {
+  "accelerator": "GPU",
   "colab": {
    "collapsed_sections": [],
-   "include_colab_link": true,
-   "name": "cifar10.ipynb",
+   "name": "waveletcifar10.ipynb",
    "provenance": []
   },
   "kernelspec": {
