working on idwt

--- a/tf2_0/idwt_testing.ipynb
+++ b/tf2_0/idwt_testing.ipynb
@@ -61,31 +61,28 @@
     "model.add(DWT(name=name))\n",
     "model.summary()\n",
     "\n",
-    "coeffs = model.predict(img_ex)\n",
-    "print(coeffs[0].shape)"
+    "coeffs = model.predict(img_ex)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model: \"sequential_3\"\n",
+      "Model: \"sequential_4\"\n",
       "_________________________________________________________________\n",
       "Layer (type)                 Output Shape              Param #   \n",
       "=================================================================\n",
-      "idwt_1_db4 (IDWT)            (None, 512, 512, 1)       0         \n",
+      "idwt_2_db4 (IDWT)            (None, 512, 512, 1)       0         \n",
       "=================================================================\n",
       "Total params: 0\n",
       "Trainable params: 0\n",
       "Non-trainable params: 0\n",
-      "_________________________________________________________________\n",
-      "(1, 259, 259, 4)\n",
-      "(1, 512, 512, 1)\n"
+      "_________________________________________________________________\n"
      ]
     }
    ],
@@ -95,9 +92,7 @@
     "model.add(IDWT(name=name))\n",
     "model.summary()\n",
     "\n",
-    "print(coeffs.shape)\n",
-    "my_recon = model.predict(coeffs)\n",
-    "print(my_recon.shape)"
+    "my_recon = model.predict(coeffs)"
    ]
   },
   {
@@ -268,62 +263,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "3672.724721867603"
+       "12.23957090386316"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "mse(LL,LL2)"
+    "mse(recon_pywt,my_recon_img)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "287.51398"
+       "144.0"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "LL[0,0]"
+    "recon_pywt[0,0]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "282.79935888193756"
+       "143.67422"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "LL2[0,0]"
+    "my_recon_img[0,0]"
    ]
   },
   {
