--- a/mnist_dwt_model_compare/duel_tree_complex_wavelet_transform.ipynb
+++ b/mnist_dwt_model_compare/duel_tree_complex_wavelet_transform.ipynb
@@ -3,6 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
+   "id": "a177ec7d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +17,7 @@
     "import sys  \n",
     "sys.path.insert(0, 'G:\\\\My Drive\\\\Colab Notebooks\\\\MWCNN')\n",
     "\n",
-    "from DTCWT import DTCWT\n",
+    "from Layers.DTCWT import *\n",
     "from tensorflow.keras.datasets import mnist\n",
     "from tensorflow.keras.optimizers import Adam, SGD"
    ]
@@ -24,6 +25,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
+   "id": "ba52173b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,13 +46,6 @@
     "\n",
     "(x_train, y_train), (x_test, y_test) = mnist.load_data()\n",
     "\n",
-    "# # Remove images to get smaller dataset\n",
-    "# x_train = x_train[:1000, :, :]\n",
-    "# y_train = y_train[:1000]\n",
-    "# x_test = x_test[:500, :, :]\n",
-    "# y_test = y_test[:500]\n",
-    "\n",
-    "\n",
     "y_train = to_categorical(y_train)\n",
     "y_test = to_categorical(y_test)\n",
     "x_train = x_train.astype('float32') / 255.0\n",
@@ -63,6 +58,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
+   "id": "33273bbf",
    "metadata": {},
    "outputs": [
     {
@@ -78,20 +74,18 @@
       "=================================================================\n",
       "input_1 (InputLayer)         [(None, 28, 28, 1)]       0         \n",
       "_________________________________________________________________\n",
-      "conv2d (Conv2D)              (None, 28, 28, 32)        320       \n",
+      "conv2d (Conv2D)              (None, 28, 28, 28)        280       \n",
       "_________________________________________________________________\n",
-      "dtcwt (DTCWT)                (None, 56, 56, 32)        0         \n",
+      "dtcwt (DTCWT)                (None, 56, 56, 28)        0         \n",
       "_________________________________________________________________\n",
-      "conv2d_1 (Conv2D)            (None, 56, 56, 32)        9248      \n",
+      "conv2d_1 (Conv2D)            (None, 56, 56, 10)        2530      \n",
       "_________________________________________________________________\n",
-      "dropout (Dropout)            (None, 56, 56, 32)        0         \n",
+      "flatten (Flatten)            (None, 31360)             0         \n",
       "_________________________________________________________________\n",
-      "flatten (Flatten)            (None, 100352)            0         \n",
-      "_________________________________________________________________\n",
-      "dense (Dense)                (None, 10)                1003530   \n",
+      "dense (Dense)                (None, 10)                313610    \n",
       "=================================================================\n",
-      "Total params: 1,013,098\n",
-      "Trainable params: 1,013,098\n",
+      "Total params: 316,420\n",
+      "Trainable params: 316,420\n",
       "Non-trainable params: 0\n",
       "_________________________________________________________________\n"
      ]
@@ -103,13 +97,11 @@
     "\n",
     "cplx_input = layers.Input(shape=input_shape)\n",
     "\n",
-    "x = layers.Conv2D(32, (3, 3), activation=\"relu\",padding='same')(cplx_input)\n",
-    "x = DTCWT.DTCWT(2)(x)\n",
-    "x = layers.Conv2D(32, (3, 3),padding='same')(x)\n",
-    "x = layers.Dropout(0.5)(x)\n",
+    "x = layers.Conv2D(28, (3, 3), padding='same')(cplx_input)\n",
+    "x = DTCWT(2)(x)\n",
+    "x = layers.Conv2D(10, (3, 3),padding='same')(x)\n",
     "x = layers.Flatten()(x)\n",
     "x = layers.Dense(nb_classes, activation=\"softmax\")(x)\n",
-    "\n",
     "model = Model(cplx_input, x, name=\"mymodel\")\n",
     "model.summary()\n",
     "\n"
@@ -118,6 +110,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
+   "id": "30715c34",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,6 +121,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "178e4e7d",
    "metadata": {},
    "outputs": [
     {
@@ -136,12 +130,10 @@
      "text": [
       "Train on 48000 samples, validate on 12000 samples\n",
       "Epoch 1/30\n",
-      "48000/48000 - 170s - loss: 1.1945 - acc: 0.7470 - val_loss: 0.4480 - val_acc: 0.8795\n",
+      "48000/48000 - 142s - loss: 1.2382 - acc: 0.7362 - val_loss: 0.4654 - val_acc: 0.8812\n",
       "Epoch 2/30\n",
-      "48000/48000 - 168s - loss: 0.4275 - acc: 0.8797 - val_loss: 0.3466 - val_acc: 0.9018\n",
-      "Epoch 3/30\n",
-      "48000/48000 - 168s - loss: 0.3697 - acc: 0.8935 - val_loss: 0.3196 - val_acc: 0.9089\n",
-      "Epoch 4/30\n"
+      "48000/48000 - 140s - loss: 0.4244 - acc: 0.8828 - val_loss: 0.3503 - val_acc: 0.9003\n",
+      "Epoch 3/30\n"
      ]
     }
    ],
@@ -157,6 +149,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "376a481a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,6 +167,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "cc79c06b",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -195,7 +189,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.6.13"
   }
  },
  "nbformat": 4,
