improved duel tree complex now support levels

--- a/visualize/DTCWT-IDTCWT-lenna.ipynb
+++ b/visualize/DTCWT-IDTCWT-lenna.ipynb
@@ -177,20 +177,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model: \"sequential_2\"\n",
+      "Model: \"sequential_3\"\n",
       "_________________________________________________________________\n",
       "Layer (type)                 Output Shape              Param #   \n",
       "=================================================================\n",
-      "dtcwt_2 (DTCWT)              (None, 1024, 1024, 1)     0         \n",
+      "dtcwt_3 (DTCWT)              (None, 1024, 1024, 1)     0         \n",
       "_________________________________________________________________\n",
-      "idtcwt (IDTCWT)              (None, 512, 512, 1)       0         \n",
+      "idtcwt_1 (IDTCWT)            (None, 512, 512, 1)       0         \n",
       "=================================================================\n",
       "Total params: 0\n",
       "Trainable params: 0\n",
@@ -200,7 +200,7 @@
     }
    ],
    "source": [
-    "level = 2\n",
+    "level = 3\n",
     "model = keras.Sequential()\n",
     "model.add(keras.Input(shape=input_shape))\n",
     "model.add(DTCWT(level))\n",
@@ -210,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -219,7 +219,7 @@
        "(1, 512, 512, 1)"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -242,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
