--- a/mnist_dwt_model_compare/coif2_rbio2.2_model.ipynb
+++ b/mnist_dwt_model_compare/coif2_rbio2.2_model.ipynb
@@ -39,7 +39,7 @@
     "epsilon = 1e-7        # epsilon - for adam optimizer\n",
     "\n",
     "trainFactor = 0.8\n",
-    "input_shape = (28, 28, 1)  # CIFAR-10 60,000 32X32 color\n",
+    "input_shape = (28, 28, 1) \n",
     "\n",
     "# optimizer = Adam(learning_rate=lr, beta_1=beta_1, beta_2=beta_2, epsilon=epsilon)\n",
     "optimizer = SGD(lr=lr, momentum=beta_1)\n",
