--- a/mnist_dwt_model_compare/duel_tree_complex_wavelet_transform.ipynb
+++ b/mnist_dwt_model_compare/duel_tree_complex_wavelet_transform.ipynb
@@ -93,7 +93,7 @@
    ],
    "source": [
     "# load DWT db2 model\n",
-    "input_shape = (28, 28, 1)  # CIFAR-10 60,000 32X32 color\n",
+    "input_shape = (28, 28, 1)\n",
     "\n",
     "cplx_input = layers.Input(shape=input_shape)\n",
     "\n",
