--- a/mnist_dwt_model_compare/duel_tree_complex_wavelet_transform-cnn-model.ipynb
+++ b/mnist_dwt_model_compare/duel_tree_complex_wavelet_transform-cnn-model.ipynb
@@ -95,7 +95,7 @@
    ],
    "source": [
     "# load DWT db2 model\n",
-    "input_shape = (28, 28, 1)  # CIFAR-10 60,000 32X32 color\n",
+    "input_shape = (28, 28, 1) \n",
     "\n",
     "cplx_input = layers.Input(shape=input_shape)\n",
     "x = layers.Conv2D(28, (3, 3), padding='same', activation=\"relu\")(cplx_input)\n",
